add: show weather parameters

--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
 </head>
 
 <body>
-	<button id="ajaxButton" type="button">Make a request</button>
 	<input id="input" type="text"></input>
+	<button id="ajaxButton" type="button">Sprawdź pogodę!</button>
+	<p>Miasto: <span id="city"></span> </p>
+	<p>Pogoda: <span id="weather_type"></span></p>
+	<p>Temperatura: <span id="temperature"></span></p>
+	<p>Ciśnienie: <span id="pressure"></span></p>
+	<p>Widoczność: <span id="visibility"></span></p>
+	<p>Siła wiatru: <span id="wind_speed"></span></p>
+	<p>Kierunek wiatru: <span id="wind_heading"></span></p>
+
+
 	<script src="request.js"></script>
-
-
-
-
 </body>
 
 </html>
