add: languages object

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+	<p id = "test"></p>
 	<h1>Check current weather</h1>
 	<input id="input" type="text" placeholder="Type city name"></input>
 	<button id="ajaxButton" type="button">Check weather!</button>
@@ -22,7 +23,7 @@
 	<p><span class="names">Wind direction: </span><span id="wind_heading"></span></p>
 
 
-	<script src="request.js"></script>
+	<script type = "module" src="request.js"></script>
 </body>
 
 </html>
