language change patch

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<p id="test"></p>
-	<h1>Check current weather</h1>
+	<h1 id = "header">Check current weather in Polnad</h1>
 	<button id = "language_change_btn"></button>
 	<input id="input" type="text" placeholder="Type city name"></input>
 	<button id="ajaxButton" type="button">Check weather!</button>
