--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
 
 <body>
 	<p id="test"></p>
-	<h1 id = "header">Check current weather in Polnad</h1>
-	<button id = "language_change_btn"></button>
+	<div class="head">
+		<h1 id="header">Check current weather in Polnad</h1>
+		<button id="language_change_btn"></button>
+		<div></div>
+	</div>
+
+
 	<input id="input" type="text" placeholder="Type city name"></input>
 	<button id="ajaxButton" type="button">Check weather!</button>
+	</div>
 	<p> <span class="names" id="cityL"></span><span id="city"></span></p>
 	<p> <span class="names" id="weather_typeL"></span><span id="weather_type"></span></p>
 	<p> <span class="names" id="temperatureL"></span><span id="temperature"></span></p>
